[package]
name = "pallet-ibc-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ibc = { version = "0.28.0", default-features = false, features = [
    "parity-scale-codec",
], git = "https://github.com/octopus-network/ibc-rs.git", branch = "v0.28.0-codec-borsh-serde" }
ibc-proto = { version = "0.25.0", default-features = false, git = "https://github.com/octopus-network/ibc-proto-rs", branch = "ibc" }

# substrate crates
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.10.0", default-features = false, features = [
    "derive",
] }
sp-std = { version = "14.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }
frame-support = { version = "28.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }

[features]
default = ['std']
std = [
    "ibc/std",
    "ibc-proto/std",
    "codec/std",
    "scale-info/std",
    "sp-std/std",
    "frame-support/std",
]
try-runtime = ["frame-support/try-runtime"]
