[package]
name = "pallet-ics20-transfer"
version = "4.0.0-dev"
authors = ["Octopus Network <hi@oct.network>"]
edition = "2021"
homepage = "https://github.com/octopus-network"
license = "Unlicense"
publish = false
repository = "https://github.com/octopus-network/substrate-ibc"
description = "FRAME pallet ibc protocol ics20 token transfer"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# local libraries
# substrate crates
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
# third-party crates
hex = { version = "0.4.0", default-features = false }
ibc-support = { version = "0.1.0", default-features = false, path = "../../ibc-support" }
log = { version = "0.4", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
sp-io = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
sp-runtime = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
sp-std = { version = "5.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
primitive-types = { version = "0.12.0", default-features = false, features = ["serde_no_std"] }

## for ibc protocl
# octopus ibc-rs
ibc = { version = "0.25.0", default-features = false, features = ["parity-scale-codec"]}
# octopus ibc-proto-rs
ibc-proto = { version = "0.24.1", default-features = false, features = ["parity-scale-codec"] }
pallet-ibc = { version = "4.0.0-dev", default-features = false, path = "../../" }

[dev-dependencies]
# local crates
chrono = "0.4.19"
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
# thrid party crates
hex = '0.4.0'
# ibc protocol crates
pallet-assets = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
pallet-babe = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
pallet-balances = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
pallet-ibc = { version = "4.0.0-dev", path = "../../" }
pallet-timestamp = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
serde = "1.0.142"
serde_json = { version = "1.0" }
sha2 = '0.10.2'
sp-core = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
sp-io = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
# substrate crates
sp-keyring = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
sp-runtime = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
sp-std = { version = "5.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
sp-version = { version = "5.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }

[features]
default = ["std"]
std = [
  "hex/std",
  "codec/std",
  "log/std",
  "frame-benchmarking/std",
  "frame-support/std",
  "frame-system/std",
  "scale-info/std",
  "ibc/std",
  "ibc-proto/std",
  "ibc-support/std",
  "sp-runtime/std",
  "sp-io/std",
  "sp-std/std",
  "primitive-types/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
