[package]
name = "pallet-ics20-transfer"
version = "4.0.0-dev"
authors = ["davirain.yin@gmail.com"]
edition = "2021"
license = "Apache-2.0"
publish = false
repository = "https://github.com/DaviRain-Su/substrate-ibc.git"
description = "FRAME pallet ibc protocol ics20 token transfer"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# substrate crates
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
hex = { version = "0.4.0", default-features = false }
pallet-ibc-utils = { version = "0.1.0", default-features = false, path = "../../utils" }
log = { version = "0.4", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
sp-io = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-runtime = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-std = { version = "5.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-timestamp = { version = "4.0.0-dev", default-features = false,  git = "https://github.com/paritytech/substrate.git", branch = "master" }
primitive-types = { version = "0.12.0", default-features = false, features = ["serde_no_std"] }
sha2 = { version = "0.10.2", default-features = false }
subtle-encoding = { version = "0.5", default-features = false }

ibc = { version = "0.41.0", default-features = false, features = ["parity-scale-codec", "serde"] }
ibc-proto = { version = "0.30.0", default-features = false, features = ["parity-scale-codec"] }
pallet-ibc = { version = "4.0.0-dev", default-features = false, path = "../../core" }

[dev-dependencies]
chrono = "0.4.19"
frame-support = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
hex = '0.4.0'
pallet-assets = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-babe = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-balances = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-ibc = { version = "4.0.0-dev", path = "../../core" }
pallet-timestamp = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
serde = "1.0.142"
serde_json = { version = "1.0" }
sha2 = '0.10.2'
sp-core = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-io = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-keyring = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-runtime = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-std = { version = "5.0.0", git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-version = { version = "5.0.0", git = "https://github.com/paritytech/substrate.git", branch = "master" }

[features]
default = ["std"]
std = [
  "codec/std",
  "frame-benchmarking?/std",
  "frame-support/std",
  "frame-system/std",
  "hex/std",
  "pallet-ibc-utils/std",
  "log/std",
  "scale-info/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
  "primitive-types/std",
  "ibc/std",
  "ibc-proto/std",
  "sha2/std",
  "subtle-encoding/std",
  "pallet-ibc/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
