[package]
name = "pallet-ics20-transfer"
version = "4.0.0-dev"
authors = ["Octopus Network <hi@oct.network>"]
edition = "2021"
homepage = "https://github.com/octopus-network"
license = "Unlicense"
publish = false
repository = "https://github.com/octopus-network/substrate-ibc"
description = "FRAME pallet ibc protocol ics20 token transfer"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# substrate crates
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = [
    "derive",
] }
frame-benchmarking = { version = "28.0.0", default-features = false, optional = true, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }
frame-support = { version = "28.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }
frame-system = { version = "28.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }
hex = { version = "0.4.0", default-features = false }
ibc-support = { version = "0.1.0", default-features = false, path = "../../ibc-support" }
log = { version = "0.4", default-features = false }
scale-info = { version = "2.10.0", default-features = false, features = [
    "derive",
] }
sp-io = { version = "30.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }
sp-runtime = { version = "31.0.1", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }
sp-std = { version = "14.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }
primitive-types = { version = "0.12.0", default-features = false, features = [
    "serde_no_std",
] }
pallet-timestamp = { version = "27.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }

ibc = { version = "0.50.0", default-features = false, features = [
    "parity-scale-codec",
    "serde",
] }
ibc-proto = { version = "0.41.0", default-features = false, features = [
    "parity-scale-codec",
] }
pallet-ibc = { version = "4.0.0-dev", default-features = false, path = "../../core" }

[dev-dependencies]
chrono = "0.4.19"
frame-support = { version = "28.0.0", git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }
hex = '0.4.0'
pallet-assets = { version = "29.0.0", git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }
pallet-babe = { version = "28.0.0", git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }
pallet-balances = { version = "28.0.0", git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }
pallet-ibc = { version = "4.0.0-dev", path = "../../core" }
pallet-timestamp = { version = "27.0.0", git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }
serde = "1.0"
serde_json = { version = "1.0" }
sha2 = '0.10.2'
sp-core = { version = "28.0.0", git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }
sp-io = { version = "30.0.0", git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }
sp-keyring = { version = "31.0.0", git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }
sp-runtime = { version = "31.0.1", git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }
sp-std = { version = "14.0.0", git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }
sp-version = { version = "29.0.0", git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }

[features]
default = ["std"]
std = [
    "hex/std",
    "codec/std",
    "log/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "ibc/std",
    "ibc-proto/std",
    "ibc-support/std",
    "sp-runtime/std",
    "sp-io/std",
    "sp-std/std",
    "primitive-types/std",
    "pallet-timestamp/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
