[package]
name = "pallet-ics20-transfer"
version = "4.0.0-dev"
authors = ["Octopus Network <hi@oct.network>"]
edition = "2021"
homepage = "https://github.com/octopus-network"
license = "Unlicense"
publish = false
repository = "https://github.com/octopus-network/substrate-ibc"
description = "FRAME pallet ibc protocol ics20 token transfer"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
hex = { version = "0.4.0", default-features = false }
log = { version = "0.4", default-features = false }
primitive-types = { version = "0.12.0", default-features = false, features = ["serde_no_std"] }
sha2 = { version = "0.10.2", default-features = false }
subtle-encoding = { version = "0.5", default-features = false }

# substrate crates
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
sp-io = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
sp-runtime = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
sp-std = { version = "5.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }

# ibc
pallet-ibc-utils = { version = "0.1.0", default-features = false, path = "../../utils" }
ibc = { version = "0.28.0", default-features = false, features = ["parity-scale-codec", "mocks-no-std","serde"], git = "https://github.com/octopus-network/ibc-rs.git", branch = "icf-m3"}
ibc-proto = { version = "0.25.0", default-features = false, features = ["parity-scale-codec"], git = "https://github.com/octopus-network/ibc-proto-rs", branch = "ibc" }

[dev-dependencies]
chrono = "0.4.19"
serde = "1.0.142"
serde_json = { version = "1.0" }
sha2 = '0.10.2'
hex = '0.4.0'
pallet-ibc = { version = "4.0.0-dev", path = "../../core" }
frame-support = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
pallet-assets = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
pallet-babe = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
pallet-balances = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
pallet-timestamp = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
sp-core = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
sp-io = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
sp-keyring = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
sp-runtime = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
sp-std = { version = "5.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
sp-version = { version = "5.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }

[features]
default = ["std"]
std = [
  "codec/std",
  "frame-benchmarking?/std",
  "frame-support/std",
  "frame-system/std",
  "hex/std",
  "pallet-ibc-utils/std",
  "log/std",
  "scale-info/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
  "primitive-types/std",
  "ibc/std",
  "ibc-proto/std",
  "sha2/std",
  "subtle-encoding/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
